[package]
name = "umeboshi"
version = "0.3.0"
authors = ["Masahiko Hamazawa <ichigyo.zanmai@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/masahiko-ofgp/umeboshi"
description = "Something like Common Lisp REPL."

[dependencies]
termion = "1.5.1"
fnv = "1.0.6"
